--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,6 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "webpack": "^1.12.12",
-    "webpack-dev-server": "^1.14.1",
-    "babel-eslint": "^8.0.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
